2011-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed a bug triggered by assigning rematerializeable variables to register A or IY.

2011-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug in bitfield reading that occoured when reading from (HL) and writing the result to L.

2011-04-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge everything except src/z80/gen.c from trunk.
	
2011-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Some optimizations for using a pointer to a bitfield in iy,
	  improve pushing of 4-byte parameters.

2011-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed genAssign to be able to handle arbitrary register-to-register assignments.

2011-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed another genPointerGet() bug.

2011-04-10 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: dbuf-ized
	* src/SDCCglobl.h: sync with trunk

2011-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Cleaned up some leftover debug messages,
	  fixed assignment of lh to hl,
	  implemented exact cost for EXSTK to SFR assignment,
	  fixed genPointerGet() bug that made simplefloat regression tests fail.

2011-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Added warning in commitPair() for lh to hl assignment.

2011-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug that could result in slightly wrong cost function.

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* Merge from trunk
	* support/regression/tests/bug3166208.c: sync with trunk
